Fixed overflow of items.

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -156,7 +156,7 @@ input[type=checkbox]{
 }
 
 .items {
-  overflow: scroll;
+  overflow: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
